vlib/v/checker/tests/assign_expr_undefined_err_f.out
vlib/v/checker/tests/assign_expr_undefined_err_f.v:2:12: error: undefined variable: `a`
    1 | fn main() {
    2 |     a, b := (-a + 1), 1
      |               ^
    3 |     println('$a, $b')
    4 | }
