vlib/v/checker/tests/assign_expr_undefined_err_f.vv
fn main() {
	a, b := (-a + 1), 1
	println('$a, $b')
}
